feat: #62 Init Skylicht Application on MacOS

--- a/Projects/Irrlicht/CMakeLists.txt
+++ b/Projects/Irrlicht/CMakeLists.txt
@@ -23,6 +23,7 @@ endif()
 # Angle include
 if(BUILD_MACOS)
 	include_directories(${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Angle/include)
+	include_directories(${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/MainApp/Platforms/MacOS)
 endif()
 
 if(CYGWIN)
