feat: #62 Remove debug library, update mac os CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -151,4 +151,5 @@ jobs:
         xcodebuild -configuration Release
         cd ..
         cp Projects/Angle/out/MacOS/Release/*.dylib Bin/Release
+        cp Bin/*.zip Bin/Release
         
