--- a/Projects/MainApp/CMakeLists.txt
+++ b/Projects/MainApp/CMakeLists.txt
@@ -130,8 +130,8 @@ elseif (BUILD_MACOS)
 	#endforeach()
 
 	# Angle library
-	set(angle_lib_path "${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Angle/out/MacOS/${CMAKE_BUILD_TYPE}")
-	set(angle_dylib_path "${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Angle/out/MacOS/${CMAKE_BUILD_TYPE}/*.dylib")
+	set(angle_lib_path "${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Angle/out/MacOS/Release")
+	set(angle_dylib_path "${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Angle/out/MacOS/Release/*.dylib")
 	
 	target_link_libraries(MainApp "${angle_lib_path}/libEGL.dylib")
 	target_link_libraries(MainApp "${angle_lib_path}/libGLESv2.dylib")
