feat: #54 Disable curl in build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ set(CMAKE_CXX_STANDARD 11)
 
 # build skylicht engine tool on Windows
 set(BUILD_ENGINE_TOOL ON)
+set(BUILD_CURL OFF)
 
 if (CMAKE_SYSTEM_NAME STREQUAL WindowsStore)
 	set(BUILD_ENGINE_TOOL OFF)
