feat: #66 Fix build UWP assets

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,10 +72,10 @@ jobs:
        cd ..
        mkdir PrjUWP
        mkdir PrjUWP\Projects
-       mkdir PrjUWP\Projects\MainApp
-       mkdir PrjUWP\Projects\MainApp\Assets
-       copy Projects\MainApp\Platforms\UWP\Assets\*.* PrjUWP\Projects\MainApp\Assets
-       copy Bin\*.zip PrjUWP\Projects\MainApp\Assets
+       mkdir PrjUWP\Projects\Template
+       mkdir PrjUWP\Projects\Template\Assets
+       copy Projects\Template\Platforms\UWP\Assets\*.* PrjUWP\Projects\Template\Assets
+       copy Bin\*.zip PrjUWP\Projects\Template\Assets
        cmake -S . -B ./PrjUWP -G "Visual Studio 16 2019" -A x64 -DCMAKE_SYSTEM_NAME=WindowsStore -DCMAKE_SYSTEM_VERSION=10.0
        cmake --build ./PrjUWP --config "Release"
     - name: Package
