--- a/Scripts/CMakeLists.txt
+++ b/Scripts/CMakeLists.txt
@@ -169,9 +169,10 @@ elseif (BUILD_MACOS)
 	target_link_libraries(@project_name@ ${LIBEGL} ${LIBGLESV2})
 	target_link_libraries(@project_name@ "-framework Cocoa")
 
+	message(STATUS "- Setup project: @project_name@")
 	foreach(res_file ${resources_files})
 		file(RELATIVE_PATH res_path "${SKYLICHT_ENGINE_SOURCE_DIR}/Bin" ${res_file})
-		message(STATUS "- Add resources: ${res_path}")
+		message(STATUS "  - Add resources: ${res_path}")
 		set_property(SOURCE ${res_file} PROPERTY MACOSX_PACKAGE_LOCATION "Resources")
 		source_group("Bin" FILES "${res_file}")
 	endforeach()
