--- a/Samples/HelloWorld/CMakeLists.txt
+++ b/Samples/HelloWorld/CMakeLists.txt
@@ -41,16 +41,24 @@ if (BUILD_ANDROID)
 endif()
 
 if (BUILD_WINDOWS_STORE)
-	file(MAKE_DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/Projects/SampleHelloWorld)
-	file(MAKE_DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/Projects/SampleHelloWorld/Assets)
+	file(MAKE_DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/Samples/HelloWorld)
+	file(MAKE_DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/Samples/HelloWorld/Assets)
 	
 	file(GLOB uwp_assets 
 		${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Template/Platforms/UWP/Assets/**.*
 		${SKYLICHT_ENGINE_SOURCE_DIR}/Bin/**.zip)
 	
 	foreach(asset_file ${uwp_assets})
-		file(COPY "${asset_file}" DESTINATION ${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/Projects/SampleHelloWorld/Assets)
+		file(COPY "${asset_file}" DESTINATION ${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/Samples/HelloWorld/Assets)
 	endforeach()
+
+	file(COPY ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Template/Platforms/UWP/Package.appxmanifest
+		DESTINATION 
+		${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/Samples/HelloWorld)
+		
+	file(COPY ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Template/Platforms/UWP/TemporaryKey.pfx
+		DESTINATION 
+		${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/Samples/HelloWorld)
 
 	file(GLOB_RECURSE platform_uwp_source 
 		${template_path}/Platforms/UWP/**.cpp 
@@ -58,7 +66,7 @@ if (BUILD_WINDOWS_STORE)
 		${template_path}/Platforms/UWP/**.h)
 	
 	# copy resource to generate prj folder
-	file(GLOB_RECURSE platform_uwp_asset ${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/Projects/SampleHelloWorld/Assets/**.*)
+	file(GLOB_RECURSE platform_uwp_asset ${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/Samples/HelloWorld/Assets/**.*)
 	add_source_group("${platform_uwp_asset}" "Assets")
 	
 	list (APPEND application_source ${platform_uwp_source})
@@ -136,8 +144,8 @@ elseif (BUILD_WINDOWS_STORE)
 	add_executable(SampleHelloWorld
 		${application_source}
 		${platform_uwp_asset}
-		${template_path}/Platforms/UWP/TemporaryKey.pfx
-		${template_path}/Platforms/UWP/Package.appxmanifest
+		${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/Samples/HelloWorld/TemporaryKey.pfx
+		${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/Samples/HelloWorld/Package.appxmanifest
 	)
 elseif (MSVC OR CYGWIN OR MINGW)
 	add_executable(SampleHelloWorld WIN32
@@ -169,9 +177,10 @@ elseif (BUILD_MACOS)
 	target_link_libraries(SampleHelloWorld ${LIBEGL} ${LIBGLESV2})
 	target_link_libraries(SampleHelloWorld "-framework Cocoa")
 
+	message(STATUS "- Setup project: SampleHelloWorld")
 	foreach(res_file ${resources_files})
 		file(RELATIVE_PATH res_path "${SKYLICHT_ENGINE_SOURCE_DIR}/Bin" ${res_file})
-		message(STATUS "- Add resources: ${res_path}")
+		message(STATUS "  - Add resources: ${res_path}")
 		set_property(SOURCE ${res_file} PROPERTY MACOSX_PACKAGE_LOCATION "Resources")
 		source_group("Bin" FILES "${res_file}")
 	endforeach()
